--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "luciusdigital/openlucius-stream",
-    "type": "project",
+    "type": "openlucius-stream",
     "description": "Node.js / socket io implementation for realtimeness in OpenLucius, a Drupal distribution.",
     "license": "GPL-2.0-or-later",
     "minimum-stability": "dev",
