--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
     "description": "Node.js / socket io implementation for realtimeness in OpenLucius, a Drupal distribution.",
     "license": "GPL-2.0-or-later",
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require": {
+        "composer/installers": "~1.0"
+    }
 }
