--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,12 @@
     "license": "GPL-2.0-or-later",
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "repositories": {
+        "assets": {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    },
     "require": {
         "composer/installers": "~1.0"
     }
